--- a/crusty-cli/Cargo.toml
+++ b/crusty-cli/Cargo.toml
@@ -8,3 +8,6 @@ description = "Crusty-TTS CLI: run orchestration, stream to file/stdout"
 crusty-core = { path = "../crusty-core" }
 anyhow = "1.0"
 toml = "0.8"
+
+[dev-dependencies]
+tempfile = "3.10"
