--- a/crusty-core/Cargo.toml
+++ b/crusty-core/Cargo.toml
@@ -9,3 +9,6 @@ anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 toml = "0.8"
+
+[dev-dependencies]
+tempfile = "3.10"
